Fix bug with overflowing items in page sections

--- a/css/_main.scss
+++ b/css/_main.scss
@@ -4,8 +4,8 @@
   &__section {
     min-height: 100vh;
     @include mixins.prefix(display, flex);
-    justify-content: center;
-    position: relative;
+    align-items: center;
+    flex-direction: column;
 
     &:first-child {
       min-height: calc(100vh - var(--header-height));
@@ -15,7 +15,5 @@
   &__heading {
     width: 700px;
     max-width: 95%;
-    position: absolute;
-    top: 20%;
   }
 }
